Fixing spacing

--- a/styles.css
+++ b/styles.css
@@ -205,7 +205,7 @@ hr
   
   position: relative;
   width: 100%;
-  height: 90vh;
+  height: 85vh;
   /* background-color: #73AD21; */
 }
 #pdf_Resume
@@ -220,8 +220,34 @@ hr
   transform: translateX(-50%);
   top:10px;
   width: 70vw;
-  height: 90vh;
+  height: 95vh;
+  
 
+}
+#closeiframe
+{
+  width: 40px;
+  float: right;
+  height: 20px;
+  background-color: red;
+  border: 2px solid black;
+  background: rgb(255,36,36);
+  background: -moz-linear-gradient(90deg, rgba(255,36,36,1) 0%, rgba(255,201,201,1) 100%);
+  background: -webkit-linear-gradient(90deg, rgba(255,36,36,1) 0%, rgba(255,201,201,1) 100%);
+  background: linear-gradient(90deg, rgba(255,36,36,1) 0%, rgba(255,201,201,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ff2424",endColorstr="#ffc9c9",GradientType=1);
+  
+}
+#closeiframe:hover
+{
+  /* transition-duration: 500ms; */
+  cursor: pointer;
+  background: rgb(255,201,201);
+  background: -moz-linear-gradient(90deg, rgba(255,201,201,1) 0%, rgba(255,36,36,1) 100%);
+  background: -webkit-linear-gradient(90deg, rgba(255,201,201,1) 0%, rgba(255,36,36,1) 100%);
+  background: linear-gradient(90deg, rgba(255,201,201,1) 0%, rgba(255,36,36,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffc9c9",endColorstr="#ff2424",GradientType=1);
+  
 }
 
 footer
